fixing location of files

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
       </div>
     </div>
-    <script src="node_modules/animejs/lib/anime.min.js"></script>
+    <script src="anime.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
